--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2024"
 itertools = "0.14.0"
 
 [dev-dependencies]
+criterion = { version = "0.7", features = ["html_reports"] }
 mockall = "0.13.1"
+
+[[bench]]
+name = "bench_pointer_vs_ref"
+harness = false
