--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+crossbeam = "0.8.4"
 itertools = "0.14.0"
+tokio = { version = "1.48.0", features = ["full"] }
 
 [dev-dependencies]
 criterion = { version = "0.7", features = ["html_reports"] }
