--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,3 @@
-[package]
-name = "hello-rust"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-crossbeam = "0.8.4"
-itertools = "0.14.0"
-tokio = { version = "1.48.0", features = ["full"] }
-
-[dev-dependencies]
-criterion = { version = "0.7", features = ["html_reports"] }
-mockall = "0.13.1"
-
-[[bench]]
-name = "bench_pointer_vs_ref"
-harness = false
+[workspace]
+resolver = "3"
+members = ["core_tests"]
