--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "[rust]": {
         "editor.defaultFormatter": "rust-lang.rust-analyzer"
     },
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    // rust-analyzer 使用 rustfmt
+    "rust-analyzer.rustfmt.extraArgs": [
+        "--edition",
+        "2024"
+    ],
 }
