:sparkles: 实现mini-redis最基本命令处理

--- a/mini_redis_server/Cargo.toml
+++ b/mini_redis_server/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "mini-redis"
+name = "mini_redis_server"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mini_redis_server = { version = "0.1.0", path = "../mini_redis_server" }
 tokio = { version = "1.48.0", features = ["full"] }
